# kernax-ml

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOC_STRUCTURE.MD  Makefile  README.md  SETUP_CHECKLIST.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
benchmarks/: README.md  __init__.py  against_gpjax.ipynb  conftest.py  input_generators.py  kernels.ipynb
benchmarks/base_kernels/: benchmark_se_kernel.py
benchmarks/comparison/: compare_se_kernel.py
benchmarks/engines/: compare_diagonal_engines.py  compare_regular_grid_engines.py
docs/: about.md  citation.md  conf.py  faq.md  getting_started.md  index.md  installation.md  placeholder.md
docs/advanced/: computation_engines.md  formatting.md  index.md  reparameterization.md
docs/api/: index.md
docs/contributing/: changelog.md  contributing_guide.md  index.md
docs/examples/: gp_regression.py  index.md  kernel_composition.py  kernel_ridge_regression.py  svm.py  svr.py
docs/getting_started/: all_kernels.md  index.md  installation.md  key_concepts.md  quick_start.md  sharp_bits.md  should_i_use_kernax.md
kernax/: AbstractKernel.py  AbstractMean.py  ConstantKernel.py  LinearKernel.py  MaternKernels.py  OperatorKernels.py  PeriodicKernel.py  PolynomialKernel.py  RBFKernel.py  RationalQuadraticKernel.py  SEKernel.py  SEMagmaKernel.py  WhiteNoiseKernel.py  WrapperKernels.py  __init__.py  config.py  distances.py  engines.py  hp_sampling.py  mask.py  module.py  parametrisations.py  utils.py
kernax/dotproduct/: AffineKernel.py  DotProductKernel.py  LinearKernel.py  PolynomialKernel.py  Sigmoid.py  __init__.py
kernax/means/: AffineMean.py  ConstantMean.py  LinearMean.py  ZeroMean.py  __init__.py  unpack.py
kernax/operators/: AbstractOperatorModule.py  OperatorKernel.py  OperatorModule.py  ProductKernel.py  ProductModule.py  SumKernel.py  SumModule.py  __init__.py
kernax/other/: ConstantKernel.py  VarianceKernel.py  (+2 more)
scripts/: README.md  setup_dev.sh  verify_setup.py
tests/: README.md  __init__.py  allurerc.json  block.ipynb  conftest.py  test_base_kernels.py  test_batched_operations.py  test_composite_kernels.py  test_config.py  test_hp_sampling.py  test_kernel_basics.py  test_kernel_compositions.py  test_kernel_formatting.ipynb  test_kernel_mutations.py  test_kernel_wrappers.py  test_mean_basics.py  test_mean_compositions.py  test_mean_formatting.ipynb  test_mean_mutations.py  test_mean_wrappers.py  test_parametrisations.py  test_transforms.py  test_wrapper_kernels.py
(+28 files in other folders)
